--- a/app/Views/products/add/add-product.template.html
+++ b/app/Views/products/add/add-product.template.html
@@ -9,7 +9,7 @@
 <button type="button" onclick="location.href = '/logout';">Logout</button>
 </br>
 
-<form action="/products/createdata" method="post">
+<form action="/products/categories/addProduct/addTag" method="post">
     <label for="product">Add new product in category: {{ category }}</label><br>
     <input type="hidden" id="category" name="category" value="{{ category }}"><br>
     <input type="text" id="product" name="product"><br>
