Added collection logic, container, middleware? and exceptions?

--- a/app/Views/products/add/add-category.template.html
+++ b/app/Views/products/add/add-category.template.html
@@ -9,11 +9,15 @@
 <button type="button" onclick="location.href = '/logout';">Logout</button>
 </br>
 
-<form action="/products/createcategory" method="post">
+<form action="/products/createUserCategory" method="post">
     <label for="category">Enter new category:</label><br>
     <input type="text" id="category" name="category"><br>
     <input type="submit" value="Submit">
 </form>
+
+<br>
+<button type="button" onclick="location.href = '/products';">Back</button>
+</br>
 
 </body>
 </html>
