--- a/app/Views/users/index.template.html
+++ b/app/Views/users/index.template.html
@@ -5,6 +5,11 @@
     <title>Product catalog</title>
 </head>
 <body>
+
+<br>
+<label>{{ error }}</label>
+</br>
+
     Welcome to product catalog, proceed to login screen:
     <button type="button" onclick="location.href = '/login';">Login</button>
 
