--- a/app/Views/products/add/add-product.template.html
+++ b/app/Views/products/add/add-product.template.html
@@ -16,5 +16,9 @@
     <input type="submit" value="Submit">
 </form>
 
+<br>
+<button type="button" onclick="location.href = '/products';">Back</button>
+</br>
+
 </body>
 </html>
